	* Cleaned up warnings in glassplayer(1) when exiting.
2019-08-13 Fred Gleason <fredg@paravelsystems.com>
	* Replaced the '--disable-stream-metadata' switch with
	'--metadata-out' in glassplayer(1).
2019-08-13 Fred Gleason <fredg@paravelsystems.com>
	* Refactored metadata processing to be strictly synchronous.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Updated Qt4 to Qt5.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Updated the prerequisites list in 'INSTALL'.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous local variables from 'Id3Parser'.
2019-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'CmdSwitch'.
2019-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Got fully synchronous HLS metadata working.
2019-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--json' switch to glassplayer(1).
2019-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Refactored glassplayergui(1) to use JSON-based IPC.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in glassplayergui(1) that caused meters
	to be rendered incorrectly.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Re-indented switch() statements in
	'src/glassplayergui/segmeter.cpp'.
2019-09-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused it to emit invalid
	JSON when invoked with '--metadata-out --json' on a stream
	containing no metadata.
2019-09-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke metadata processing when using the
	'FILE' audio device.
2019-09-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayergui(1) that processed integer JSON
	values incorrectly.
2019-09-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused audio dropouts when
	playing HLS streams containing timed metadata.
	* Added an 'AOT' metric to the AAC codec.
	* Added a 'Transport Sync Errors' the AAC codec.